--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
+  "name": "main",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "qiankun": "^2.4.4"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zdndd/qiankun-html.git"
   },
-  "devDependencies": {
-    "webpack": "^4.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
-  }
+  "bugs": {
+    "url": "https://github.com/zdndd/qiankun-html/issues"
+  },
+  "author": "zdndd",
+  "license": "MIT",
+  "homepage": "https://github.com/zdndd/qiankun-html#readme"
 }
